// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`默认配置快照 DEFAULT_SANDBOX_RESOURCES 应包含合理默认值 1`] = `
{
  "cpu": "1",
  "memory": "512m",
  "pidsLimit": 100,
  "storage": "1g",
}
`;

exports[`默认配置快照 DEFAULT_SANDBOX_NETWORK 应包含安全默认值 1`] = `
{
  "allowlist": [
    "api.anthropic.com",
    "api.openai.com",
    "api.github.com",
  ],
  "mode": "restricted",
}
`;

exports[`默认配置快照 DEFAULT_SANDBOX_CONFIG 应包含完整默认配置 1`] = `
{
  "env": {},
  "network": {
    "allowlist": [
      "api.anthropic.com",
      "api.openai.com",
      "api.github.com",
    ],
    "mode": "restricted",
  },
  "resources": {
    "cpu": "1",
    "memory": "512m",
    "pidsLimit": 100,
    "storage": "1g",
  },
  "runtime": "docker",
  "timeout": 30000,
}
`;
